Fix module whitelisting
fixes: https://github.com/creek-service/creek-json-schema-gradle-plugin/issues/122

The Gradle plugin was executing the generator with modules on the class-path, meaning they had no module name.

The fix was to have the plugin execute the generator with modules on the module-path.